<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="user"
        type="it.polito.mad.lab2.viewmodels.UserViewModel"/>
    </data>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ShowProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src ="@{user.profileImg_value}"
            android:contentDescription="" />

        <!--app:srcCompat="@drawable/avatar1"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@{user.fullName_value}"
            android:hint="@string/fullName_default"
            android:textSize="30sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!--android:text="@string/location_default"/>-->

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/location_default"
                android:text="@{user.location_value}"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.513" />

            <ImageButton
                android:id="@+id/googleButtonShowPro"
                android:layout_width="73dp"
                android:layout_height="64dp"
                android:layout_marginEnd="24dp"
                android:background ="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/map"
                android:scaleType="fitXY"
                android:contentDescription="@null" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView3"
                style="@style/textUnderNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="items bought"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvNumberBought"
                app:layout_constraintStart_toStartOf="@+id/tvNumberBought"
                app:layout_constraintTop_toBottomOf="@+id/tvNumberBought" />

            <TextView
                android:id="@+id/textView4"
                style="@style/textUnderNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="out of 5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvRating"
                app:layout_constraintStart_toStartOf="@+id/tvRating"
                app:layout_constraintTop_toBottomOf="@+id/tvRating" />

            <TextView
                android:id="@+id/tvNumberBought"
                style="@style/highlightedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemBoughtNumber_default"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvRating"
                style="@style/highlightedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userRating_default"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="#ffd6d6d6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvRating"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvNumberBought"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view2"
            style="@style/horizonalLongLine"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelNickName"
                style="@style/textViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Nickname"
                app:layout_constraintBottom_toTopOf="@+id/nickName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/nickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@{user.nickName_value}"
                android:hint="@string/nickName_default"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelNickName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view3"
            style="@style/horizonalLongLine"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelEmail"
                style="@style/textViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Email"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@{user.email_value}"
                android:hint="@string/email_default"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
</layout>